kubernetes/admissioncontrollers/introduction/demo2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo2
spec:
  containers:
  - name: nginx
    image: nginx
