kubernetes/admissioncontrollers/introduction/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: example-webhook
webhooks:
  - name: example-webhook.default.svc
    admissionReviewVersions:
      - v1
    sideEffects: None
    clientConfig:
      service:
        name: example-webhook
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR3RENDQXFpZ0F3SUJBZ0lVRURsZVpSTVFCT04ranhEQ01aTGFlbEt6RW1rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2VERUxNQWtHQTFVRUJoTUNTVTR4Q3pBSkJnTlZCQWdUQWxWUU1RNHdEQVlEVlFRSEV3Vk9iMmxrWVRFUQpNQTRHQTFVRUNoTUhSWGhoYlhCc1pURVFNQTRHQTFVRUN4TUhWMlZpYUc5dmF6RW9NQ1lHQTFVRUF4TWZSWGhoCmJYQnNaU0JCWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCRFFUQWVGdzB5TmpBMU1UVXdOVEkxTURCYUZ3MHoKTVRBMU1UUXdOVEkxTURCYU1IZ3hDekFKQmdOVkJBWVRBa2xPTVFzd0NRWURWUVFJRXdKVlVERU9NQXdHQTFVRQpCeE1GVG05cFpH [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    failurePolicy: Ignore
